--- a/Musetti/index.html
+++ b/Musetti/index.html
@@ -5,64 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../style.css">
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvYtPqZSAXLwFhmwZoq_bgethkZw3gjz4&callback=initMap"></script>
 </head>
 <body>
     <script src="../index.js"></script>
-    <script>
-        window.initMap = function() {
-            toggleDarkmode(true);
-            map = new google.maps.Map(document.getElementById("map"), {
-                center: {lat: 47.5451464, lng: 7.5869987},
-                zoom: 12,
-            });
-            const marker = new google.maps.Marker(
-            {
-                map: map,
-                position: new google.maps.LatLng(47.5914631, 7.6473783),
-                title: "Wiesengarten Musetti"
-            }
-            )
-        }
     </script>
     <script type="text/javascript">
         let favicons = makeFavicons();
         document.head.innerHTML += favicons;
         let Header = makeHeader()
         document.body.appendChild(Header)
-        let content = makeMainContent("Wiesengarten Musetti", `Das Restaurant Wiesengarten ist ein kleines Restaurant in Riehen, nahe an der deutschen Grenze. Das Restaurant ist eher edel, gedacht für Geburtstage, Hochzeiten oder andere Anlässe. Beim Eintreten wird man freundlich begrüsst und zu seinem Tisch geführt. Man fühlt sich sehr schnell wohl und gut aufgenommen. 
-        Das Restaurant ist ein Familienbetrieb und man merkt, dass die Betreiber*innen mit sehr viel Leidenschaft dabei sind. Auch die Speisen, wie z.B. die Pasta sind komplett hausgemacht. Im Zentrum des Restaurants steht auch der Wein. Es gibt es eine grosse Weinkarte, aus verschiedenen Regionen Italiens. Die verwendeten Produkte sind saisonal und marktfrisch. 
-        Das Restaurant wird mehrheitlich von Erwachsenen besucht, und ist nicht unbedingt die beste Wahl für Kinder, da die Speisekarte keine Kindermenüs enthält. Die Preise sind etwas gehoben, was aber bei der hervorragenden Qualität und der hausgemachten Zubereitung gerechtfertigt ist. Die Räumlichkeiten sind relativ klein, aber sehr gemütlich eingerichtet.`, 
-        [
-        "musetti/fleisch.png",
-        "musetti/sauce.png",
-        "musetti/glace.png",
-        "musetti/wine.png",
-        "musetti/aussen.png",
-        "musetti/innen.png",
-        "musetti/nacht.png",
-        ], 
-        {
-            Ambiente: 4, 
-            PreisçLeistungsçVerhältnis: 4, 
-            Qualität_der_Speisen: 4.5, 
-            Quantität_der_Auswahl: 3.5, 
-            Lage: 4.5, 
-            Hygiene: 4.5, 
-            Service: 5, 
-            Ausstattung: 5
-        }, 
-        {
-            Adresse: "Weilstrasse 51 4125 Basel", 
-            Telefonnummer: "061 641 26 42",
-            Email: "reservation@wiesengartenmusetti.ch",
-            Website: "http://www.wiesengartenmusetti.ch/"
-        },
-        {
-            Montag_und_Dienstag: "Geschlossen",
-            Mittwoch_bis_Sonntag: "11.30 bis 14.00 / 18.00 bis 23.00"
-        }
-        )
+        let content = pastBlogs.findBlog("Musetti").makeBlog();
         document.body.appendChild(content)
         let sideBar = makeSidebar();
         document.body.appendChild(sideBar);
