--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../style.css">
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvYtPqZSAXLwFhmwZoq_bgethkZw3gjz4&callback=initMap"></script>
 </head>
 <body>
     <script src="../index.js"></script>
@@ -14,8 +13,8 @@
         document.head.innerHTML += favicons;
         let Header = makeHeader()
         document.body.appendChild(Header)
-        let content = makeMainContent("Über uns", `Wir sind Arik, Noée und Gian. Wir haben uns als Abschlussprojekt der Sekundarschule für einen Foodblog entschieden, der (hoffentlich) wöchentlich mit neuen Bewertungen von Restaurants und Cafés der Region Basel erscheint.
-        Wir alle übernehmen im Team verschiedene Rollen. Wo Noée und Arik die Restaurants und Cafés testen, ist Gian für diese Website verantwortlich.`)
+        let content = new blog("Über uns", "aboutus", `Wir sind Arik, Noée und Gian. Wir haben uns als Abschlussprojekt der Sekundarschule für einen Foodblog entschieden, der (hoffentlich) wöchentlich mit neuen Bewertungen von Restaurants und Cafés der Region Basel erscheint.
+        Wir alle übernehmen im Team verschiedene Rollen. Wo Noée und Arik die Restaurants und Cafés testen, ist Gian für diese Website verantwortlich.`).makeBlog();
         document.body.appendChild(content)
         let sideBar = makeSidebar();
         document.body.appendChild(sideBar);
