--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         document.head.innerHTML += favicons;
         let Header = makeHeader()
         document.body.appendChild(Header)
-        let content = makeLandingPage();
+        let content = pastBlogs.makeLandingPage();
         document.body.appendChild(content)
         let sideBar = makeSidebar();
         document.body.appendChild(sideBar);
