Added landing page map

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         document.body.appendChild(sideBar);
         let footer = makeFooter();
         document.body.appendChild(footer);
-        document.addEventListener("DOMContentLoaded", _ => {
-            toggleDarkmode(true);
-        });
+        checkMap();
     </script>
 </body>
 </html>
