--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -13,8 +13,9 @@
         document.head.innerHTML += favicons;
         let Header = makeHeader()
         document.body.appendChild(Header)
-        let content = new blog("Über uns", "aboutus", `Wir sind Arik, Noée und Gian. Wir haben uns als Abschlussprojekt der Sekundarschule für einen Foodblog entschieden, der (hoffentlich) wöchentlich mit neuen Bewertungen von Restaurants und Cafés der Region Basel erscheint.
-        Wir alle übernehmen im Team verschiedene Rollen. Wo Noée und Arik die Restaurants und Cafés testen, ist Gian für diese Website verantwortlich.`).makeBlog();
+        let content = new blog("Über uns", "aboutus", `Wir sind Arik, Noée und Gian und kommen aus dem Raum Basel. Wir haben uns als Abschlussprojekt der Sekundarschule für einen Foodblog entschieden. Das heisst, Wir besuchen ungefähr wöchentlich Restaurants und Cafés der Region Basel zu denen wir dann Bewertungen schreiben.
+        Wir hoffen einigen Leuten mit unserer Arbeit einen kleinen Überblick über verschiedene Restaurants in Basel zu geben. Auf unseren Social Media Accounts laden wir auch regelmässig neue Beiträge hoch und informieren über neue Bewertungen auf unserer Website. Wenn ihre Vorschläge oder Verbesserungen habt, könnt ihr diese gerne an unsere E-Mail-Adresse schicken.
+        Wir alle übernehmen im Team verschiedene Rollen. Arik und Noée sind für die Besuche und Bewertungen der zuständig. Gian hingegen erstellt und gestaltet die Website. `).makeBlog();
         document.body.appendChild(content)
         let sideBar = makeSidebar();
         document.body.appendChild(sideBar);
