--- a/Musetti/index.html
+++ b/Musetti/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-    <script src="../index.js"></script>
-    </script>
+    <script src="../index.js"></script></script>
     <script type="text/javascript">
         let favicons = makeFavicons();
         document.head.innerHTML += favicons;
